--- a/home.css
+++ b/home.css
@@ -36,6 +36,7 @@ body{
     display: flex;
     flex-direction: column;
     padding-top: 20px;
+    padding-right: 30px;
 }
 
 #navbar {            
