--- a/home.css
+++ b/home.css
@@ -219,6 +219,12 @@ body{
 }
 
 
+.sketch-button{
+    background-color: white;
+     margin: 20px; 
+     border-radius: 30px;
+}
+
 .float{
 	position: fixed;	
 	bottom:80px;
@@ -239,4 +245,71 @@ body{
 
 .my-float{
 	margin-top:22px;
+}
+/* 
+.label-container{
+	position:fixed;
+	
+	visibility: hidden;
+}
+
+
+#base-button + #pop-up {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s ease;
+  }
+  
+  #base-button + #pop-up{
+    visibility: visible;
+    opacity: 1;
+  } */
+
+
+
+  
+.label-container{
+	position:fixed;
+	bottom:48px;
+	right:105px;
+	margin-bottom: 100px;
+	visibility: hidden;
+}
+
+.label-text{
+	color:#FFF;
+	background:rgba(51,51,51,0.5);
+	display:table-cell;
+	vertical-align:middle;
+	padding:10px;
+	border-radius:3px;
+}
+
+.label-arrow{
+	display:table-cell;
+	vertical-align:middle;
+	color:#333;
+	opacity:0.5;
+}
+
+
+a.float + div.label-container {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s ease;
+}
+
+a.float:hover + div.label-container{
+  visibility: visible;
+  opacity: 1;
+}
+
+#pop-up{
+    border-radius: 10px;
+    width: 50px;
+    height: 100px;
+    background: rgb(231, 53, 82);
+    display: flex;
+    direction: column;
+
 }
